fix spacing and sizes

--- a/Reusable Chart/style.css
+++ b/Reusable Chart/style.css
@@ -6,8 +6,8 @@
 
 body {
   color: hsl(0, 0%, 7%);
-  background: hsl(0, 0%, 97%);
-  --color-data: hsl(349, 63%, 46%);
+  background: hsl(0, 0%, 99%);
+  --color-data: hsl(0, 83%, 53%);
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui,
     helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;
   min-height: 100vh;
@@ -17,7 +17,7 @@ body {
 svg {
   margin: auto;
   display: block;
-  max-width: 42rem;
+  max-width: 52rem;
   width: 95vw;
   height: auto;
 }
